# src/controllers/gameController.js
@@ -7,9 +7,6 @@ gameController.getAllGames = async (req, res) => {
     #swagger.summary = "Get all games"
     #swagger.description = "Returns all games in the database"
     #swagger.tags = ['Games']
-    #swagger.security = [{
-        "OAuth2": ["read"]
-        }]
     */
     try {
         const games = await Game.find();
@@ -44,9 +41,6 @@ gameController.addOrUpdateGame = async (req, res) => {
     #swagger.summary = "Add or Update a Game"
     #swagger.description = "Endpoint to add or update a game in the database."
     #swagger.tags = ['Games']
-    #swagger.security = [{
-        "OAuth2": ["write"]
-        }]
     */
     try {
         const { gameTitle, consoles, developer, publisher, genre, shortSummary, rating, releaseDate, recommended } = req.body;
@@ -94,9 +88,6 @@ gameController.deleteGame = async (req, res) => {
     #swagger.summary = "Delete a game by ID"
     #swagger.description = "Deletes a game by its ID"
     #swagger.tags = ['Games']
-    #swagger.security = [{
-        "OAuth2": ["admin"]
-        }]
     */
     try {
         const gameId = req.params.id;
