# src/controllers/userscontroller.js
@@ -10,9 +10,6 @@ usersController.getAllUsers = async (req, res) => {
     #swagger.summary = "Get all users"
     #swagger.description = "Returns all users in the database"
     #swagger.tags = ['Users']
-    #swagger.security = [{
-        "OAuth2": ["read"]
-        }]
     */
     try {
         const users = await User.find();
@@ -52,9 +49,6 @@ usersController.addOrUpdateUser = async (req, res) => {
     #swagger.summary = "Add or update a user (with password hashing)"
     #swagger.description = "Add or update a user (with password hashing)"
     #swagger.tags = ['Users']
-    #swagger.security = [{
-        "OAuth2": ["write"]
-        }]
     */
     try {
         const { username, password, email, name } = req.body;
@@ -85,9 +79,6 @@ usersController.deleteUser = async (req, res) => {
     #swagger.summary = "Delete a user by username"
     #swagger.description = "Delete a user by username"
     #swagger.tags = ['Users']
-    #swagger.security = [{
-        "OAuth2": ["admin"]
-        }]
     */
     try {
         const { username } = req.params;
